lib/ffi/generated_bindings.dart


  int BASS_ChannelGet3DPosition(
    int handle,
    ffi.Pointer<BASS_3DVECTOR> pos,
    ffi.Pointer<BASS_3DVECTOR> orient,
    ffi.Pointer<BASS_3DVECTOR> vel,
  ) {
    return _BASS_ChannelGet3DPosition(
      handle,
      pos,
      orient,
      vel,
    );
  }

  late final _BASS_ChannelGet3DPositionPtr = _lookup<
      ffi.NativeFunction<
          BOOL Function(
              DWORD,
              ffi.Pointer<BASS_3DVECTOR>,
              ffi.Pointer<BASS_3DVECTOR>,
              ffi.Pointer<BASS_3DVECTOR>)>>('BASS_ChannelGet3DPosition');
  late final _BASS_ChannelGet3DPosition =
      _BASS_ChannelGet3DPositionPtr.asFunction<
          int Function(int, ffi.Pointer<BASS_3DVECTOR>,
              ffi.Pointer<BASS_3DVECTOR>, ffi.Pointer<BASS_3DVECTOR>)>();

  int BASS_ChannelGetLength(
    int handle,
    int mode,
  ) {
    return _BASS_ChannelGetLength(
      handle,
      mode,
    );
  }

  late final _BASS_ChannelGetLengthPtr =
      _lookup<ffi.NativeFunction<QWORD Function(DWORD, DWORD)>>(
          'BASS_ChannelGetLength');
  late final _BASS_ChannelGetLength =
      _BASS_ChannelGetLengthPtr.asFunction<int Function(int, int)>();

  int BASS_ChannelSetPosition(
    int handle,
    int pos,
    int mode,
  ) {
    return _BASS_ChannelSetPosition(
      handle,
      pos,
      mode,
    );
  }

  late final _BASS_ChannelSetPositionPtr =
      _lookup<ffi.NativeFunction<BOOL Function(DWORD, QWORD, DWORD)>>(
          'BASS_ChannelSetPosition');
  late final _BASS_ChannelSetPosition =
      _BASS_ChannelSetPositionPtr.asFunction<int Function(int, int, int)>();

  int BASS_ChannelGetPosition(
    int handle,
    int mode,
  ) {
    return _BASS_ChannelGetPosition(
      handle,
      mode,
    );
  }

  late final _BASS_ChannelGetPositionPtr =
      _lookup<ffi.NativeFunction<QWORD Function(DWORD, DWORD)>>(
          'BASS_ChannelGetPosition');
  late final _BASS_ChannelGetPosition =
      _BASS_ChannelGetPositionPtr.asFunction<int Function(int, int)>();

  int BASS_ChannelGetLevel(
    int handle,
  ) {
    return _BASS_ChannelGetLevel(
      handle,
    );
  }

  late final _BASS_ChannelGetLevelPtr =
      _lookup<ffi.NativeFunction<DWORD Function(DWORD)>>(
          'BASS_ChannelGetLevel');
  late final _BASS_ChannelGetLevel =
      _BASS_ChannelGetLevelPtr.asFunction<int Function(int)>();

  int BASS_ChannelGetLevelEx(
    int handle,
    ffi.Pointer<ffi.Float> levels,
    double length,
    int flags,
  ) {
    return _BASS_ChannelGetLevelEx(
      handle,
      levels,
      length,
      flags,
    );
  }

  late final _BASS_ChannelGetLevelExPtr = _lookup<
      ffi.NativeFunction<
          BOOL Function(DWORD, ffi.Pointer<ffi.Float>, ffi.Float,
              DWORD)>>('BASS_ChannelGetLevelEx');
  late final _BASS_ChannelGetLevelEx = _BASS_ChannelGetLevelExPtr.asFunction<
      int Function(int, ffi.Pointer<ffi.Float>, double, int)>();

  int BASS_ChannelGetData(
    int handle,
    ffi.Pointer<ffi.Void> buffer,
    int length,
  ) {
    return _BASS_ChannelGetData(
      handle,
      buffer,
      length,
    );
  }

  late final _BASS_ChannelGetDataPtr = _lookup<
      ffi.NativeFunction<
          DWORD Function(
              DWORD, ffi.Pointer<ffi.Void>, DWORD)>>('BASS_ChannelGetData');
  late final _BASS_ChannelGetData = _BASS_ChannelGetDataPtr.asFunction<
      int Function(int, ffi.Pointer<ffi.Void>, int)>();

  int BASS_ChannelSetSync(
    int handle,
    int type,
    int param,
    ffi.Pointer<SYNCPROC> proc,
    ffi.Pointer<ffi.Void> user,
  ) {
    return _BASS_ChannelSetSync(
      handle,
      type,
      param,
      proc,
      user,
    );
  }

  late final _BASS_ChannelSetSyncPtr = _lookup<
      ffi.NativeFunction<
          HSYNC Function(DWORD, DWORD, QWORD, ffi.Pointer<SYNCPROC>,
              ffi.Pointer<ffi.Void>)>>('BASS_ChannelSetSync');
  late final _BASS_ChannelSetSync = _BASS_ChannelSetSyncPtr.asFunction<
      int Function(
          int, int, int, ffi.Pointer<SYNCPROC>, ffi.Pointer<ffi.Void>)>();

  int BASS_ChannelRemoveSync(
    int handle,
    int sync1,
  ) {
    return _BASS_ChannelRemoveSync(
      handle,
      sync1,
    );
  }

  late final _BASS_ChannelRemoveSyncPtr =
      _lookup<ffi.NativeFunction<BOOL Function(DWORD, HSYNC)>>(
          'BASS_ChannelRemoveSync');
  late final _BASS_ChannelRemoveSync =
      _BASS_ChannelRemoveSyncPtr.asFunction<int Function(int, int)>();

  int BASS_ChannelSetLink(
    int handle,
    int chan,
  ) {
    return _BASS_ChannelSetLink(
      handle,
      chan,
    );
  }

  late final _BASS_ChannelSetLinkPtr =
      _lookup<ffi.NativeFunction<BOOL Function(DWORD, DWORD)>>(
          'BASS_ChannelSetLink');
  late final _BASS_ChannelSetLink =
      _BASS_ChannelSetLinkPtr.asFunction<int Function(int, int)>();

  int BASS_ChannelRemoveLink(
    int handle,
    int chan,
  ) {
    return _BASS_ChannelRemoveLink(
      handle,
      chan,
    );
  }

  late final _BASS_ChannelRemoveLinkPtr =
      _lookup<ffi.NativeFunction<BOOL Function(DWORD, DWORD)>>(
          'BASS_ChannelRemoveLink');
  late final _BASS_ChannelRemoveLink =
      _BASS_ChannelRemoveLinkPtr.asFunction<int Function(int, int)>();

  int BASS_ChannelSetDSP(
    int handle,
    ffi.Pointer<DSPPROC> proc,
    ffi.Pointer<ffi.Void> user,
    int priority,
  ) {
    return _BASS_ChannelSetDSP(
      handle,
      proc,
      user,
      priority,
    );
  }

  late final _BASS_ChannelSetDSPPtr = _lookup<
      ffi.NativeFunction<
          HDSP Function(DWORD, ffi.Pointer<DSPPROC>, ffi.Pointer<ffi.Void>,
              ffi.Int32)>>('BASS_ChannelSetDSP');
  late final _BASS_ChannelSetDSP = _BASS_ChannelSetDSPPtr.asFunction<
      int Function(int, ffi.Pointer<DSPPROC>, ffi.Pointer<ffi.Void>, int)>();

  int BASS_ChannelRemoveDSP(
    int handle,
    int dsp,
  ) {
    return _BASS_ChannelRemoveDSP(
      handle,
      dsp,
    );
  }

  late final _BASS_ChannelRemoveDSPPtr =
      _lookup<ffi.NativeFunction<BOOL Function(DWORD, HDSP)>>(
          'BASS_ChannelRemoveDSP');
  late final _BASS_ChannelRemoveDSP =
      _BASS_ChannelRemoveDSPPtr.asFunction<int Function(int, int)>();

  int BASS_ChannelSetFX(
    int handle,
    int type,
    int priority,
  ) {
    return _BASS_ChannelSetFX(
      handle,
      type,
      priority,
    );
  }

  late final _BASS_ChannelSetFXPtr =
      _lookup<ffi.NativeFunction<HFX Function(DWORD, DWORD, ffi.Int32)>>(
          'BASS_ChannelSetFX');
  late final _BASS_ChannelSetFX =
      _BASS_ChannelSetFXPtr.asFunction<int Function(int, int, int)>();

  int BASS_ChannelRemoveFX(
    int handle,
    int fx,
  ) {
    return _BASS_ChannelRemoveFX(
      handle,
      fx,
    );
  }

  late final _BASS_ChannelRemoveFXPtr =
      _lookup<ffi.NativeFunction<BOOL Function(DWORD, HFX)>>(
          'BASS_ChannelRemoveFX');
  late final _BASS_ChannelRemoveFX =
      _BASS_ChannelRemoveFXPtr.asFunction<int Function(int, int)>();

  int BASS_FXSetParameters(
    int handle,
    ffi.Pointer<ffi.Void> params,
  ) {
    return _BASS_FXSetParameters(
      handle,
      params,
    );
  }

  late final _BASS_FXSetParametersPtr =
      _lookup<ffi.NativeFunction<BOOL Function(HFX, ffi.Pointer<ffi.Void>)>>(
          'BASS_FXSetParameters');
  late final _BASS_FXSetParameters = _BASS_FXSetParametersPtr.asFunction<
      int Function(int, ffi.Pointer<ffi.Void>)>();

  int BASS_FXGetParameters(
    int handle,
    ffi.Pointer<ffi.Void> params,
  ) {
    return _BASS_FXGetParameters(
      handle,
      params,
    );
  }

  late final _BASS_FXGetParametersPtr =
      _lookup<ffi.NativeFunction<BOOL Function(HFX, ffi.Pointer<ffi.Void>)>>(
          'BASS_FXGetParameters');
  late final _BASS_FXGetParameters = _BASS_FXGetParametersPtr.asFunction<
      int Function(int, ffi.Pointer<ffi.Void>)>();

  int BASS_FXSetPriority(
    int handle,
    int priority,
  ) {
    return _BASS_FXSetPriority(
      handle,
      priority,
    );
  }

  late final _BASS_FXSetPriorityPtr =
      _lookup<ffi.NativeFunction<BOOL Function(HFX, ffi.Int32)>>(
          'BASS_FXSetPriority');
  late final _BASS_FXSetPriority =
      _BASS_FXSetPriorityPtr.asFunction<int Function(int, int)>();

  int BASS_FXReset(
    int handle,
  ) {
    return _BASS_FXReset(
      handle,
    );
  }

  late final _BASS_FXResetPtr =
      _lookup<ffi.NativeFunction<BOOL Function(DWORD)>>('BASS_FXReset');
  late final _BASS_FXReset = _BASS_FXResetPtr.asFunction<int Function(int)>();
}

class __mbstate_t extends ffi.Union {
  @ffi.Array.multi([128])
  external ffi.Array<ffi.Int8> __mbstate8;

  @ffi.Int64()
  external int _mbstateL;
}

class __darwin_pthread_handler_rec extends ffi.Struct {
  external ffi
          .Pointer<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>
      __routine;

  external ffi.Pointer<ffi.Void> __arg;

  external ffi.Pointer<__darwin_pthread_handler_rec> __next;
}

class _opaque_pthread_attr_t extends ffi.Struct {
  @ffi.Int64()
  external int __sig;

  @ffi.Array.multi([56])
  external ffi.Array<ffi.Int8> __opaque;
}

class _opaque_pthread_cond_t extends ffi.Struct {
  @ffi.Int64()
  external int __sig;

  @ffi.Array.multi([40])
  external ffi.Array<ffi.Int8> __opaque;
}

class _opaque_pthread_condattr_t extends ffi.Struct {
  @ffi.Int64()
  external int __sig;

  @ffi.Array.multi([8])
  external ffi.Array<ffi.Int8> __opaque;
}

class _opaque_pthread_mutex_t extends ffi.Struct {
  @ffi.Int64()
  external int __sig;

  @ffi.Array.multi([56])
  external ffi.Array<ffi.Int8> __opaque;
}

class _opaque_pthread_mutexattr_t extends ffi.Struct {
  @ffi.Int64()
  external int __sig;

  @ffi.Array.multi([8])
  external ffi.Array<ffi.Int8> __opaque;
}

class _opaque_pthread_once_t extends ffi.Struct {
  @ffi.Int64()
  external int __sig;

  @ffi.Array.multi([8])
  external ffi.Array<ffi.Int8> __opaque;
}

class _opaque_pthread_rwlock_t extends ffi.Struct {
  @ffi.Int64()
  external int __sig;

  @ffi.Array.multi([192])
  external ffi.Array<ffi.Int8> __opaque;
}

class _opaque_pthread_rwlockattr_t extends ffi.Struct {
  @ffi.Int64()
  external int __sig;

  @ffi.Array.multi([16])
  external ffi.Array<ffi.Int8> __opaque;
}

class _opaque_pthread_t extends ffi.Struct {
  @ffi.Int64()
  external int __sig;

  external ffi.Pointer<__darwin_pthread_handler_rec> __cleanup_stack;

  @ffi.Array.multi([8176])
  external ffi.Array<ffi.Int8> __opaque;
}

class BASS_DEVICEINFO extends ffi.Struct {
  external ffi.Pointer<ffi.Int8> name;

  external ffi.Pointer<ffi.Int8> driver;

  @DWORD()
  external int flags;
}

typedef DWORD = ffi.Uint32;

class BASS_INFO extends ffi.Struct {
  @DWORD()
  external int flags;

  @DWORD()
  external int hwsize;

  @DWORD()
  external int hwfree;

  @DWORD()
  external int freesam;

  @DWORD()
  external int free3d;

  @DWORD()
  external int minrate;

  @DWORD()
  external int maxrate;

  @BOOL()
  external int eax;

  @DWORD()
  external int minbuf;

  @DWORD()
  external int dsver;

  @DWORD()
  external int latency;

  @DWORD()
  external int initflags;

  @DWORD()
  external int speakers;

  @DWORD()
  external int freq;
}

typedef BOOL = ffi.Int32;

class BASS_RECORDINFO extends ffi.Struct {
  @DWORD()
  external int flags;

  @DWORD()
  external int formats;

  @DWORD()
  external int inputs;

  @BOOL()
  external int singlein;

  @DWORD()
  external int freq;
}

class BASS_SAMPLE extends ffi.Struct {
  @DWORD()
  external int freq;

  @ffi.Float()
  external double volume;

  @ffi.Float()
  external double pan;

  @DWORD()
  external int flags;

  @DWORD()
  external int length;

  @DWORD()
  external int max;

  @DWORD()
  external int origres;

  @DWORD()
  external int chans;

  @DWORD()
  external int mingap;

  @DWORD()
  external int mode3d;

  @ffi.Float()
  external double mindist;

  @ffi.Float()
  external double maxdist;

  @DWORD()
  external int iangle;

  @DWORD()
  external int oangle;

  @ffi.Float()
  external double outvol;

  @DWORD()
  external int vam;
